minor update - add display option buttons dynamically - add display text option (for testing purpose)

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="vertical_recycler_view">Vertical recycler view</string>
     <string name="table_layout">Table layout</string>
     <string name="litho_library">Litho</string>
+    <string name="text_not_emoji">Text instead of emoji (for testing)</string>
 
 </resources>
